--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,15 +82,15 @@ button {
 
 .active {
   display: block;
-  /* animation: appear 1s ease-in-out; */
+  animation: appear 1s ease-out;
   transform: translateY(0) scaleY(1);
 }
 @keyframes appear {
   0% {
-    transform: translateY(-100%) scaleY(0);
+    opacity: 0;
   }
   100% {
-    transform: translateY(0) scaleY(1);
+    opacity: 1;
   }
 }
 
