--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,6 +434,8 @@ button {
   left: 0;
   top: 0;
   border-radius: 15px;
+  text-align: center;
+  padding: 0 10px;
   display: flex;
   justify-content: center;
   align-items: center;
